--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -7,9 +7,9 @@
             <!-- Grid row -->
             <div class="row mt-3" style="padding-top: 3rem; color: black; ">
                 <!-- Grid column -->
-                <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
+                <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4 d-flex align-content-center justify-content-center">
                     <!-- Content -->
-                    <img style="width: 100%; height: 250px;" src="/Images/footerimg.jpg" alt="">
+                    <img class="w-75"  src="Images/footerimg.jpg" alt="">
                     
                     <!-- <h6 class="text-uppercase fw-bold mb-4">
                         <i class="fas fa-gem me-3"></i>Education Mster System
