--- a/views/admin/contact/displaycontact.ejs
+++ b/views/admin/contact/displaycontact.ejs
@@ -13,51 +13,53 @@
               </div>
             </div>
           </div>
-          <table class="table table-bordered table-striped">
-            <thead>
-              <tr>
-                <th>#ID</th>
-                <th>UserId</th>
-                <th>Name</th>
-                <th>Email</th>
-                <th>Phone</th>
-                <th>Message</th>
-                <th>Action</th>
-              </tr>
-            </thead>
+          <div style="overflow-x: auto">
+            <table class="table table-bordered table-striped">
+              <thead>
+                <tr>
+                  <th>#ID</th>
+                  <th>UserId</th>
+                  <th>Name</th>
+                  <th>Email</th>
+                  <th>Phone</th>
+                  <th>Message</th>
+                  <th>Action</th>
+                </tr>
+              </thead>
 
-            <tbody>
-              <% i=1 %> <% d.forEach((item)=>{ %>
-              <tr>
-                <td><%= i++ %></td>
-                <td><%= item._id %></td>
-                <td><%= item.name %></td>
-                <td><%= item.email %></td>
-                <td><%= item.phone %></td>
-                <td><%= item.message %></td>
-                <td class="text-center">
-                  <a
-                    href="/deletecontact/<%= item._id %>"
-                    class="btn btn-danger"
-                    >Delete</a
-                  >
-                </td>
-              </tr>
-              <% }) %>
-            </tbody>
+              <tbody>
+                <% i=1 %> <% d.forEach((item)=>{ %>
+                <tr>
+                  <td><%= i++ %></td>
+                  <td><%= item._id %></td>
+                  <td><%= item.name %></td>
+                  <td><%= item.email %></td>
+                  <td><%= item.phone %></td>
+                  <td><%= item.message %></td>
+                  <td class="text-center">
+                    <a
+                      href="/deletecontact/<%= item._id %>"
+                      class="btn btn-danger"
+                      >Delete</a
+                    >
+                  </td>
+                </tr>
+                <% }) %>
+              </tbody>
 
-            <tfoot>
-              <tr>
-                <th>#ID</th>
-                <th>UserID</th>
-                <th>Name</th>
-                <th>Email</th>
-                <th>Phone</th>
-                <th>Message</th>
-                <th>Action</th>
-              </tr>
-            </tfoot>
-          </table>
+              <tfoot>
+                <tr>
+                  <th>#ID</th>
+                  <th>UserID</th>
+                  <th>Name</th>
+                  <th>Email</th>
+                  <th>Phone</th>
+                  <th>Message</th>
+                  <th>Action</th>
+                </tr>
+              </tfoot>
+            </table>
+          </div>
         </div>
       </div>
     </div>
