--- a/views/admin/sidebar.ejs
+++ b/views/admin/sidebar.ejs
@@ -5,44 +5,50 @@
         <a
           href="/dashboard"
           class="active bg-secondary rounded"
-          style="font-weight: 500"
+          style="font-weight: 500; text-decoration: none"
         >
           Dashboard</a
         >
       </li>
       <li class="bg-warning rounded" style="font-weight: 500">
-        <a href="/displayblog"> DisplayBlogs</a>
+        <a style="text-decoration: none" href="/displayblog"> DisplayBlogs</a>
       </li>
       <li class="bg-warning rounded" style="font-weight: 500">
-        <a href="/displaycategory">Categories</a>
+        <a style="text-decoration: none" href="/displaycategory">Categories</a>
       </li>
       <li class="bg-warning rounded" style="font-weight: 500">
-        <a href="/changepassword">Change Password</a>
+        <a style="text-decoration: none" href="/changepassword"
+          >Change Password</a
+        >
       </li>
       <li class="bg-warning rounded" style="font-weight: 500">
-        <a href="/changeprofile">Change Profile</a>
+        <a style="text-decoration: none" href="/changeprofile"
+          >Change Profile</a
+        >
       </li>
 
       <% if(is_Verified == "Admin") { %>
       <li class="bg-warning rounded" style="font-weight: 500">
-        <a href="/displayabout">About</a>
+        <a style="text-decoration: none" href="/displayabout">About</a>
       </li>
       <!-- <li class="bg-warning" style="font-weight: 500">
         <a href="/displaybanner">Banner Edit</a>
       </li> -->
       <li class="bg-warning rounded" style="font-weight: 500">
-        <a href="/displaycontact">Contact</a>
+        <a style="text-decoration: none" href="/displaycontact">Contact</a>
       </li>
       <li class="bg-warning rounded" style="font-weight: 500">
-        <a href="/displayuser">User</a>
+        <a style="text-decoration: none" href="/displayuser">User</a>
       </li>
       <li class="bg-warning rounded" style="font-weight: 500">
-        <a href="/displayuserblogAll">Users all Blogs</a>
+        <a style="text-decoration: none" href="/displayuserblogAll"
+          >Users all Blogs</a
+        >
       </li>
       <% } %>
 
       <li class="bg-warning rounded" style="font-weight: 500">
-        <a href="/logout">Logout</a>
+        <a style="text-decoration: none" href="/logout">Logout</a>
       </li>
     </ul>
   </div>
