--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -29,16 +29,16 @@
                         Useful links
                     </h6>
                     <p>
-                        <a href="/login" class="text-reset">Create Blogs</a>
+                        <a style="text-decoration: none;" href="/login" class="text-reset">Create Blogs</a>
                     </p>
                     <p>
-                        <a href="/blog" class="text-reset">Read Blogs</a>
+                        <a style="text-decoration: none;" href="/blog" class="text-reset">Read Blogs</a>
                     </p>
                     <p>
-                        <a href="/about" class="text-reset">About US</a>
+                        <a style="text-decoration: none;" href="/about" class="text-reset">About US</a>
                     </p>
                     <p>
-                        <a href="/contact" class="text-reset">Contact Us</a>
+                        <a style="text-decoration: none;" href="/contact" class="text-reset">Contact Us</a>
                     </p>
                 </div>
                 <!-- Grid column -->
@@ -72,16 +72,16 @@
     
         <!-- Right -->
         <div>
-            <a href="" class="me-4 text-reset">
+            <a style="text-decoration: none;" href="" class="me-4 text-reset">
                 <i class="fa-brands fa-square-facebook" style="color: blue; font-size: 1.5rem;"></i>
             </a>
-            <a href="https://www.instagram.com/somverma711/?utm_source=qr&igshid=NGExMmI2YTkyZg%3D%3D" class="me-4 text-reset">
+            <a style="text-decoration: none;" href="https://www.instagram.com/somverma711/?utm_source=qr&igshid=NGExMmI2YTkyZg%3D%3D" class="me-4 text-reset">
                 <i class="fa-brands fa-instagram text-warning" style="color: rgb(255, 0, 204); font-size: 1.5rem;"></i>
             </a>
-            <a href="" class="me-4 text-reset">
+            <a style="text-decoration: none;" href="" class="me-4 text-reset">
                 <i class="fa-brands fa-google" style="color: red; font-size: 1.5rem;"></i>
             </a>
-            <a href="https://www.linkedin.com/in/som-verma-1094a324b" class="me-4 text-reset">
+            <a style="text-decoration: none;" href="https://www.linkedin.com/in/som-verma-1094a324b" class="me-4 text-reset">
                 <i class="fab fa-linkedin text-black" style="color: black; font-size: 1.5rem;"></i>
             </a>
 
