--- a/views/admin/user/displayuser.ejs
+++ b/views/admin/user/displayuser.ejs
@@ -11,7 +11,9 @@
                 <h1>User list</h1>
               </div>
             </div>
-            <table class="table table-bordered table-striped">
+            <!-- table  -->
+              <div style="overflow-x:auto;">
+               <table class="table table-bordered table-striped">
               <tr>
                 <th>#ID</th>
                 <th>Name</th>
@@ -90,14 +92,15 @@
                 <th>Action</th>
                 <th>Action</th>
               </tr>
-            </table>
+               </table>
+              </div>
+            <!-- table end -->
           </div>
         </div>
       </div>
     </div>
   </div>
 </section>
+<%- include('../../footer.ejs') %>
 
 <!-- Modal -->
-
-<%- include('../../footer.ejs') %>
