--- a/views/header.ejs
+++ b/views/header.ejs
@@ -65,7 +65,7 @@
           Blogger
         </a> -->
         <a href="/">
-          <img style="width: 100%; height: 75px" src="Images/L1.jpg" alt=""
+          <img style="width: 100%; height: 75px" src="images/L1.jpg" alt=""
         /></a>
         <!--mobile view-->
         <button
