--- a/views/home.ejs
+++ b/views/home.ejs
@@ -48,7 +48,7 @@
         </p>
       </div> -->
     </div>
-    <img style="margin-top: 5.6rem" src="Images/b1.jpg" alt="banner" />
+    <img style="margin-top: 5.6rem" src="images/b1.jpg" alt="banner" />
   </div>
 </section>
 
