--- a/views/home.ejs
+++ b/views/home.ejs
@@ -48,7 +48,18 @@
         </p>
       </div> -->
     </div>
-    <img style="margin-top: 5.6rem" src="images/b1.jpg" alt="banner" />
+    <img
+      class="web_banner"
+      style="margin-top: 5.6rem"
+      src="images/b1.jpg"
+      alt="banner"
+    />
+    <img
+      class="mob_banner"
+      style="margin-top: 5.6rem"
+      src="images/mbimg.jpg"
+      alt="mobile banner"
+    />
   </div>
 </section>
 
