--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -9,7 +9,7 @@
                 <!-- Grid column -->
                 <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4 d-flex align-content-center justify-content-center">
                     <!-- Content -->
-                    <img class="w-75"  src="images/footerimg.jpg" alt="">
+                    <img style="width: 200px;"  src="../images/footerimg.jpg" alt="">
                     
                     <!-- <h6 class="text-uppercase fw-bold mb-4">
                         <i class="fas fa-gem me-3"></i>Education Mster System
@@ -91,7 +91,7 @@
     </section>
     <!-- Section: Social media -->
      <!-- Copyright -->
-     <div class="text-center p-4  text-white bg-secondary" style="background-color: black; margin-top: -1rem;">
+     <div class="text-center p-4  text-white bg-secondary" style="background-color: black; margin-top: -1rem; ">
         © 2023 Copyright:
      <span class="text-warning h5">Design & Developed by S.K.V.</span>
     
