--- a/views/header.ejs
+++ b/views/header.ejs
@@ -83,7 +83,7 @@
           Blogger
         </a> -->
         <a href="/">
-          <img style="width: 100%; height: 75px" src="images/L1.jpg" alt=""
+          <img style="width: 100%; height: 55px" src="../images/L1.jpg" alt=""
         /></a>
         <!--mobile view-->
         <button
