--- a/views/header.ejs
+++ b/views/header.ejs
@@ -72,7 +72,7 @@
   <body>
     <nav
       class="navbar navbar-expand-md navbar-dark fixed-top bg-secondary"
-      style="background-color: #b3b3b3; height: 63px"
+      style="background-color: #b3b3b3"
     >
       <div class="container-fluid">
         <!-- <a
