--- a/views/about.ejs
+++ b/views/about.ejs
@@ -7,7 +7,7 @@
     </div>
 
     <div class="img">
-      <img style="width: 300px; height: 300px" src="<%= a.image.url %> " />
+      <img style="width: 75vw; height: 300px" src="<%= a.image.url %> " />
     </div>
   </div>
 </section>
